# GoiasData-API

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GoiasData_Database.sqlite  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/api/routes/: __init__.py  dados.py  health.py
app/core/: config.py
app/db/: connection.py
app/schemas/: database.py
app/services/: database_service.py
tests/: __init__.py  test_health.py
